--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/negotiator": "^0.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.1.8",
+    "embla-carousel-auto-scroll": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.424.0",
     "negotiator": "^0.6.3",
